fixed the spacing issue for the list

--- a/assets/style.css
+++ b/assets/style.css
@@ -3,3 +3,7 @@
   flex-direction: row;
   justify-content: space-around;
 }
+
+li {
+  padding: 30px;
+}
